# Xbox-Wheel-Compatibility-Service

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: main.cpp  output_manager.cpp  output_manager.h  wheel.cpp  wheel.h  wheel_manager.cpp  wheel_manager.h
